2001-01-18  Dietmar Maurer  <dietmar@ximian.com>

	* main.c: use the new factory macros

	* Bonobo_Sample_Echo.oaf.in: changed the oaf IIDs to
	OAFIID:Bonobo_Sample_Echo_Factory and OAFIID:Bonobo_Sample_Echo

2000-10-31  Michael Meeks  <michael@helixcode.com>

	* Makefile.am: get idl includes the right way round.

2000-07-23  Michael Meeks  <michael@helixcode.com>

	* echo-client.c (main): fix severe ref-counting brokenness.

2000-07-22  Michael Meeks  <michael@helixcode.com>

	* echo-client.c (main): cleanings.
	(init_bonobo): handle orb correctly.

2000-07-12  Michael Meeks  <michael@helixcode.com>

	* echo.c (echo_new): Kill gtk_object_destroy.

2000-05-26  Michael Meeks  <michael@helixcode.com>

	* echo.oafinfo: fix misuse of IDL:Empty that was screwing an oaf test.

2000-03-26  Miguel de Icaza  <miguel@helixcode.com>

	* README: add.

2000-04-01  Timur Bakeyev <timur@gnu.org>

	* Makefile.am: Add missed -I$(top_srcdir)/bonobo to the INCLUDES.
	
2000-03-26  Miguel de Icaza  <miguel@helixcode.com>

	* New directory. Contains a sample skeleton for creating Bonobo
	components.
