@@ -1,14 +1,0 @@
-/*
- *  Sample file that demostrates how to create new
- * Bonobo interfaces.
- */
-
-#include <Bonobo.idl>
-
-module Demo {
-  
-	interface Echo : Bonobo::Unknown {
-		void echo (in string message);
-	};
-
-};
